--- a/sentimentaltweet/package.json
+++ b/sentimentaltweet/package.json
@@ -1,4 +1,4 @@
-{ 
+{
 "name": "sentimentaltweet",
  "main": "index.js",
  "dependencies": {
@@ -10,7 +10,7 @@
    "cookie-parser": "^1.3.3",
    "method-override": "^2.2.0",
    "express-session": "^1.8.2",
-   "orchestrate": "^0.3.11",
+   "mongodb": "^2.1.0",
    "passport": "^0.2.1",
    "passport-facebook": "^1.0.3",
    "passport-google": "^0.3.0",
